--- a/Blog.Client/Components/Pages/Author/Components/Published.razor
+++ b/Blog.Client/Components/Pages/Author/Components/Published.razor
@@ -1,4 +1,4 @@
-﻿@using static Blog.Client.Components.Pages.Author.AuthorHome
+﻿@*@using static Blog.Client.Components.Pages.Author.AuthorHome
 @if (ListPost?.Any() == true)
 {
     <div class="space-y-6">
@@ -156,4 +156,4 @@ else
 
     [Parameter]
     public List<AuthorPost>? ListPost { get; set; }
-}
+}*@
