--- a/Blog.Client/Components/_Imports.razor
+++ b/Blog.Client/Components/_Imports.razor
@@ -30,6 +30,9 @@
 @using Blog.Client.Components.Pages.Public
 @using Blog.Client.Components.Pages.Author
 @using Blog.Client.Components.Pages.Author.Components
+@using Blog.Client.Components.Pages.Admin.Components.Home
+@using Blog.Client.Components.Pages.Admin.Components
+@using Blog.Client.Components.Pages.Components
 
 
 @inject IJSRuntime JS
