--- a/Blog.Client/Components/Pages/Components/Category.razor
+++ b/Blog.Client/Components/Pages/Components/Category.razor
@@ -127,7 +127,7 @@
     public async Task HandleBookMark(int? PostId)
     {
         addBookMarkRequest.PostId = PostId;
-        await PostClient.AddBookMark(addBookMarkRequest);
+        await PostInteractionsClient.AddBookMark(addBookMarkRequest);
 
        
         var request = await PostClient.ListByCategory(Id, Pagination);
