--- a/Blog.Client/Components/Pages/Public/BlogViewConstruct.razor
+++ b/Blog.Client/Components/Pages/Public/BlogViewConstruct.razor
@@ -241,7 +241,7 @@
                                     <p class="text-gray-700 leading-relaxed">@comment.Content</p>
                                 </div>
                                 <div class="mt-2 flex items-center gap-4 text-sm">
-                                    <div @onclick="() => GetCommentId(comment.CommentId)" class="@(comment.IsLikedComment ? "text-indigo-600" : "text-gray-600")  flex items-center gap-1  hover:text-indigo-600 transition-colors cursor-pointer">
+                                    <div @onclick="() => GetCommentId(comment.CommentId,comment.PostId)" class="@(comment.IsLikedComment ? "text-indigo-600" : "text-gray-600")  flex items-center gap-1  hover:text-indigo-600 transition-colors cursor-pointer">
                                         <svg class="w-4 h-4 " fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5" />
                                         </svg>
@@ -331,7 +331,7 @@
 
     private async Task Get()
     {
-       
+
         var result = await PostClient.Get(postRequest);
         PostDto = result.Value;
         if (PostDto?.Photo is not null)
@@ -343,7 +343,7 @@
     private async Task HandleSubmitComment()
     {
         addCommentRequest.PostId = PostId;
-        var request_comment = await PostClient.AddComment(addCommentRequest);
+        var request_comment = await CommentsClient.AddComment(addCommentRequest);
 
         var result = await PostClient.Get(postRequest);
         PostDto = result.Value;
@@ -352,10 +352,11 @@
         StateHasChanged();
     }
 
-    public async Task GetCommentId(int commentId)
+    public async Task GetCommentId(int commentId,int PostId)
     {
+        toggleCommentLikeRequest.PostId = PostId;
         toggleCommentLikeRequest.CommentId = commentId;
-        await PostClient.ToggleLikeComment(toggleCommentLikeRequest);
+        await CommentsClient.ToggleLikeComment(toggleCommentLikeRequest);
         var result = await PostClient.Get(postRequest);
         PostDto = result.Value;
         StateHasChanged();
@@ -364,7 +365,7 @@
     private async Task HandlePostLike()
     {
         togglePostLikeRequest.PostId = PostId;
-        var request = await PostClient.ToggleLikePost(togglePostLikeRequest);
+        var request = await PostInteractionsClient.ToggleLikePost(togglePostLikeRequest);
         var result = await PostClient.Get(postRequest);
         PostDto = result.Value;
         StateHasChanged();
@@ -373,7 +374,7 @@
     public async Task HandleBookMark()
     {
         addBookMarkRequest.PostId = PostId;
-        var request = await PostClient.AddBookMark(addBookMarkRequest);
+        var request = await PostInteractionsClient.AddBookMark(addBookMarkRequest);
         var result = await PostClient.Get(postRequest);
         PostDto = result.Value;
         StateHasChanged();
