--- a/Blog.Client/Components/Pages/Admin/AdminHome.razor
+++ b/Blog.Client/Components/Pages/Admin/AdminHome.razor
@@ -18,6 +18,7 @@
             }
             else
             {
+
                 <NavLink href="profile" class="flex-shrink-0 cursor-pointer border-2 rounded-full border-gray-300 hover:border-indigo-500 w-10 h-10 overflow-hidden transition-all">
                     @if (userProfile?.PhotoUrl is null)
                     {
@@ -29,13 +30,6 @@
                     }
                 </NavLink>
             }
-
-            <NavLink href="bookmark" class="btn btn-ghost btn-square bg-indigo-50 hover:bg-indigo-50">
-                <svg class="w-6 h-6 text-indigo-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.4" d="m17 21-5-4-5 4V3.889a.92.92 0 0 1 .244-.629.808.808 0 0 1 .59-.26h8.333a.81.81 0 0 1 .589.26.92.92 0 0 1 .244.63V21Z" />
-                </svg>
-            </NavLink>
-
             <div class="indicator">
                 @if (TotalApproval?.Count > 0)
                 {
@@ -45,12 +39,32 @@
                     Approval
                 </NavLink>
             </div>
-
-            <button @onclick="() => PageState.AdminView(PageState.AdminPostState.home)" class="btn btn-ghost btn-square bg-indigo-50 hover:bg-indigo-50">
-                <svg class="w-6 h-6  text-indigo-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.4" d="m4 12 8-8 8 8M6 10.5V19a1 1 0 0 0 1 1h3v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h3a1 1 0 0 0 1-1v-8.5" />
+            <NavLink href="bookmark" class="">
+                <svg class="w-7 h-7  text-indigo-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                    <path d="M7.833 2c-.507 0-.98.216-1.318.576A1.92 1.92 0 0 0 6 3.89V21a1 1 0 0 0 1.625.78L12 18.28l4.375 3.5A1 1 0 0 0 18 21V3.889c0-.481-.178-.954-.515-1.313A1.808 1.808 0 0 0 16.167 2H7.833Z" />
                 </svg>
+
+
+            </NavLink>
+            <NavLink href="bookmark" class="">             
+                
+                <svg class="w-7 h-7 text-indigo-500 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0.6" d="M12 5.365V3m0 2.365a5.338 5.338 0 0 1 5.133 5.368v1.8c0 2.386 1.867 2.982 1.867 4.175 0 .593 0 1.292-.538 1.292H5.538C5 18 5 17.301 5 16.708c0-1.193 1.867-1.789 1.867-4.175v-1.8A5.338 5.338 0 0 1 12 5.365ZM8.733 18c.094.852.306 1.54.944 2.112a3.48 3.48 0 0 0 4.646 0c.638-.572 1.236-1.26 1.33-2.112h-6.92Z" />
+                </svg>
+
+            </NavLink>
+
+           
+
+          
+
+            <button @onclick="() => PageState.AdminView(PageState.AdminPostState.home)" class="cursor-pointer">
+                <svg class="w-7 h-7  text-indigo-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0.7" d="m4 12 8-8 8 8M6 10.5V19a1 1 0 0 0 1 1h3v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h3a1 1 0 0 0 1-1v-8.5" />
+                </svg>
+
             </button>
+         
         </div>
     </header>
 
@@ -154,6 +168,7 @@
     private PagedResult<PostDto>? ListForAdmin { get; set; } = new PagedResult<PostDto>();
     private PagedResult<PostDto>? ListDraftForAdmin { get; set; } = new PagedResult<PostDto>();
 
+
     private GetApprovalTotalDto? TotalApproval { get; set; } = new GetApprovalTotalDto();
     private ListPaginatedRequest Pagination { get; set; } = new ListPaginatedRequest { PageNumber = 1, PageSize = 10 };
     private ListPaginatedRequest PaginationPublished { get; set; } = new ListPaginatedRequest { PageNumber = 1, PageSize = 10 };
@@ -212,7 +227,7 @@
 
     private async Task ListFeatured()
     {
-        var featured = await PostClient.ListFeatured();
+        var featured = await FeaturedClient.ListFeatured();
         featuredPosts = featured.Value ?? new List<FeaturedPostDto>();
     }
 
@@ -245,14 +260,14 @@
 
     public async Task HandleReadMore(int? Id)
     {
-        await PostClient.TrackPostView(Id);
+        await PostInteractionsClient.TrackPostView(Id);
         Navigation.NavigateTo($"viewblogconstruct/{Id}");
         StateHasChanged();
     }
 
     public async Task GetApprovalTotal()
     {
-        var request = await PostClient.GetApprovalTotal();
+        var request = await PostModerationClient.GetApprovalTotal();
         TotalApproval = request.Value;
         StateHasChanged();
     }
