--- a/Blog.Client/Components/Pages/Author/AuthorHome.razor
+++ b/Blog.Client/Components/Pages/Author/AuthorHome.razor
@@ -27,16 +27,16 @@
 
         <div class="flex flex-col md:flex-row md:space-y-0 md:space-x-1 justify-between bg-white rounded-2xl shadow-sm p-4 mb-6 ">
             <div class="flex gap-1">
-                <button @onclick="() => PageState.AuthorView(PageState.AuthorPostState.all_post)" class="px-4 py-2 rounded-lg text-sm font-medium text-gray-500 hover:bg-indigo-500 hover:text-white cursor-pointer transition-colors ">
+                <button @onclick="() => PostViewState.AuthorView(PostViewState.AuthorPostState.all_post)" class="px-4 py-2 rounded-lg text-sm font-medium text-gray-500 hover:bg-indigo-500 hover:text-white cursor-pointer transition-colors ">
                     All Posts
                 </button>
-                <button @onclick="() => PageState.AuthorView(PageState.AuthorPostState.published)" class="px-4 py-2 rounded-lg text-sm font-medium text-gray-500 hover:bg-indigo-500 hover:text-white cursor-pointer transition-colors ">
+                <button @onclick="() => PostViewState.AuthorView(PostViewState.AuthorPostState.published)" class="px-4 py-2 rounded-lg text-sm font-medium text-gray-500 hover:bg-indigo-500 hover:text-white cursor-pointer transition-colors ">
                     Published
                 </button>
-                <button @onclick="() => PageState.AuthorView(PageState.AuthorPostState.pending)" class="px-4 py-2 rounded-lg text-sm font-medium text-gray-500 hover:bg-indigo-500 hover:text-white cursor-pointer transition-colors ">
+                <button @onclick="() => PostViewState.AuthorView(PostViewState.AuthorPostState.pending)" class="px-4 py-2 rounded-lg text-sm font-medium text-gray-500 hover:bg-indigo-500 hover:text-white cursor-pointer transition-colors ">
                     Pending Approval
                 </button>
-                <button @onclick="() => PageState.AuthorView(PageState.AuthorPostState.drafts)" class="px-4 py-2 rounded-lg text-sm font-medium text-gray-500 hover:bg-indigo-500 hover:text-white cursor-pointer transition-colors ">
+                <button @onclick="() => PostViewState.AuthorView(PostViewState.AuthorPostState.drafts)" class="px-4 py-2 rounded-lg text-sm font-medium text-gray-500 hover:bg-indigo-500 hover:text-white cursor-pointer transition-colors ">
                     Drafts
                 </button>
             </div>
@@ -49,7 +49,7 @@
                     <input type="text" class="w-[100%]" placeholder="Search posts..." />
                 </label>
 
-                <button @onclick="() => PageState.AuthorView(PageState.AuthorPostState.bookmarks)" class="btn btn-ghost btn-square bg-indigo-50 hover:bg-indigo-50">
+                <button @onclick="() => PostViewState.AuthorView(PostViewState.AuthorPostState.bookmarks)" class="btn btn-ghost btn-square bg-indigo-50 hover:bg-indigo-50">
                     <svg class="w-6 h-6 text-indigo-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.4" d="m17 21-5-4-5 4V3.889a.92.92 0 0 1 .244-.629.808.808 0 0 1 .59-.26h8.333a.81.81 0 0 1 .589.26.92.92 0 0 1 .244.63V21Z" />
                     </svg>
@@ -57,31 +57,31 @@
            </div>
         </div>
 
-        @if (PageState.AuthorPageView == PageState.AuthorPostState.all_post)
+        @if (PostViewState.AuthorPageView == PostViewState.AuthorPostState.all_post)
         {
             <Featured featuredPosts="featuredPosts" ReadMore="HandleReadMore" />
             <AllPosts recentPost="recentPost" Pagination="Pagination" Refresh="RefreshAsync" />
 
         }
-        else if (PageState.AuthorPageView == PageState.AuthorPostState.drafts)
+        else if (PostViewState.AuthorPageView == PostViewState.AuthorPostState.drafts)
         {
 
             <Drafts />
 
         }
-        else if (PageState.AuthorPageView == PageState.AuthorPostState.pending)
+        else if (PostViewState.AuthorPageView == PostViewState.AuthorPostState.pending)
         {
 
             <Pending />
 
         }
-        else if (PageState.AuthorPageView == PageState.AuthorPostState.published)
+        else if (PostViewState.AuthorPageView == PostViewState.AuthorPostState.published)
         {
 
             <Blog.Client.Components.Pages.Author.Components.Published  />
 
         }
-        else if (PageState.AuthorPageView == PageState.AuthorPostState.bookmarks)
+        else if (PostViewState.AuthorPageView == PostViewState.AuthorPostState.bookmarks)
         {
 
             <BookMarks />
