--- a/Blog.Client/Components/Pages/Public/PublicHome.razor
+++ b/Blog.Client/Components/Pages/Public/PublicHome.razor
@@ -1,4 +1,4 @@
-﻿@*@page "/public"
+﻿@page "/public"
 @inject NavigationManager Navigation
 
 <div class="min-h-screen bg-gray-50 py-8">
@@ -196,7 +196,7 @@
         public int PageSize { get; set; } = 5;
     }
 
-    public class PagedResult<T>
+    public class PagedResults<T>
     {
         public List<T> Items { get; set; } = new List<T>();
         public int PageNumber { get; set; }
@@ -255,7 +255,7 @@
             .ToList();
 
         // Create PagedResult (simulating what your API returns)
-        var pagedResult = new PagedResult<PostSummaryDto>
+        var pagedResult = new PagedResults<PostSummaryDto>
         {
             Items = pagedPosts,
             PageNumber = pageRequest.PageNumber,
@@ -538,4 +538,4 @@
         var plainText = System.Text.RegularExpressions.Regex.Replace(content ?? "", "<.*?>", string.Empty);
         return plainText.Length > 200 ? plainText.Substring(0, 200) + "..." : plainText;
     }
-}*@
+}
