Realtime Communication Done

--- a/Blog.Client/Components/App.razor
+++ b/Blog.Client/Components/App.razor
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Blog.Client.Realtime
+<!DOCTYPE html>
 <html lang="en" data-theme="clint" >
 <head>
     <meta charset="utf-8" />
