--- a/Blog.Client/Components/Layout/Sidebar.razor
+++ b/Blog.Client/Components/Layout/Sidebar.razor
@@ -1,5 +1,6 @@
 ﻿@implements IDisposable
 @page "/sidebar"
+@using Blog.Client.Realtime
 
 <div class="drawer-side z-20">
     <label for="my-drawer-3" aria-label="close sidebar" class="drawer-overlay"></label>
