--- a/Blog.Client/Components/Pages/Author/Components/Published.razor
+++ b/Blog.Client/Components/Pages/Author/Components/Published.razor
@@ -1,4 +1,5 @@
-﻿@*@using static Blog.Client.Components.Pages.Author.AuthorHome
+﻿@using Blog.Client.Realtime
+@*@using static Blog.Client.Components.Pages.Author.AuthorHome
 @if (ListPost?.Any() == true)
 {
     <div class="space-y-6">
