--- a/Blog.Client/Components/Pages/BlogView.razor
+++ b/Blog.Client/Components/Pages/BlogView.razor
@@ -1,4 +1,5 @@
 ﻿@page "/viewblog/{id:int}"
+@using Blog.Client.Realtime
 @rendermode InteractiveServer
 
 <div class="h-screen bg-gray-50 py-8 overflow-auto">
