--- a/Blog.Client/Components/Pages/Public/PublicView.razor
+++ b/Blog.Client/Components/Pages/Public/PublicView.razor
@@ -1,4 +1,5 @@
-﻿<h3>PublicView</h3>
+﻿@using Blog.Client.Realtime
+<h3>PublicView</h3>
 
 <!-- The button to open modal -->
 <label for="my_modal_6" class="btn btn-red-500 bg-red-500">open modal</label>
