--- a/Blog.Client/Components/Routes.razor
+++ b/Blog.Client/Components/Routes.razor
@@ -1,4 +1,5 @@
-﻿@inject AuthStateProvider AuthStateProvider
+﻿@using Blog.Client.Realtime
+@inject AuthStateProvider AuthStateProvider
 @inject NavigationManager Navigation
 @inject ILogger<App> Logger
 
