--- a/Blog.Client/Components/Pages/Admin/Components/BookMark.razor
+++ b/Blog.Client/Components/Pages/Admin/Components/BookMark.razor
@@ -1,4 +1,5 @@
 ﻿@page "/bookmark"
+@using Blog.Client.Realtime
 @attribute [Authorize(Roles = "Author,Admin")]
 
 <div class="p-5 h-screen overflow-auto">
