--- a/Blog.Client/Components/Pages/Admin/Components/Draft.razor
+++ b/Blog.Client/Components/Pages/Admin/Components/Draft.razor
@@ -1,4 +1,5 @@
-﻿
+﻿@using Blog.Client.Realtime
+
 
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
     @if (ListDraftForAdmin?.Items.Any() == true)
