--- a/Blog.Client/Components/Pages/Admin/Components/Home/Featured.razor
+++ b/Blog.Client/Components/Pages/Admin/Components/Home/Featured.razor
@@ -1,4 +1,5 @@
-﻿@using BlogApi.Application.Dtos
+﻿@using Blog.Client.Realtime
+@using BlogApi.Application.Dtos
 @inject IJSRuntime JS
 
 @if (featuredPosts is null)
