--- a/Blog.Client/Components/Pages/Admin/Components/Home/RecentPosts.razor
+++ b/Blog.Client/Components/Pages/Admin/Components/Home/RecentPosts.razor
@@ -1,4 +1,5 @@
-﻿
+﻿@using Blog.Client.Realtime
+
 <section class="pt-6 border-t border-gray-200">
     <div class="flex justify-between items-center mb-6">
         <h2 class="text-xl font-bold text-gray-800">Recent Posts</h2>
