--- a/Blog.Client/Components/Pages/AppInitializer.razor
+++ b/Blog.Client/Components/Pages/AppInitializer.razor
@@ -1,4 +1,5 @@
-﻿@using BlogApi.Client.Security
+﻿@using Blog.Client.Realtime
+@using BlogApi.Client.Security
 @using Microsoft.AspNetCore.Components
 @inject AuthStateProvider AuthStateProvider
 @inject AuthorizationDelegatingHandler AuthHandler
