--- a/Blog.Client/Components/Pages/Author/AuthorHome.razor
+++ b/Blog.Client/Components/Pages/Author/AuthorHome.razor
@@ -1,4 +1,5 @@
 ﻿@page "/author"
+@using Blog.Client.Realtime
 
 
 
@@ -6,7 +7,7 @@
 <div class="min-h-screen bg-gray-50 py-8">
     <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 h-screen overflow-auto pb-15">
 
-  
+
         <div class="mb-8">
             <div class="flex items-center justify-between mb-4">
                 <div>
@@ -22,7 +23,7 @@
                 </NavLink>
             </div>
 
-         
+
         </div>
 
         <div class="flex flex-col md:flex-row md:space-y-0 md:space-x-1 justify-between bg-white rounded-2xl shadow-sm p-4 mb-6 ">
@@ -40,7 +41,7 @@
                     Drafts
                 </button>
             </div>
-           <div class="flex gap-2">
+            <div class="flex gap-2">
 
                 <label class="input input-bordered flex items-center gap-2 w-[100%]">
                     <svg class="w-4 h-4 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -54,7 +55,7 @@
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.4" d="m17 21-5-4-5 4V3.889a.92.92 0 0 1 .244-.629.808.808 0 0 1 .59-.26h8.333a.81.81 0 0 1 .589.26.92.92 0 0 1 .244.63V21Z" />
                     </svg>
                 </button>
-           </div>
+            </div>
         </div>
 
         @if (PostViewState.AuthorPageView == PostViewState.AuthorPostState.all_post)
@@ -78,7 +79,7 @@
         else if (PostViewState.AuthorPageView == PostViewState.AuthorPostState.published)
         {
 
-            <Blog.Client.Components.Pages.Author.Components.Published  />
+            <Blog.Client.Components.Pages.Author.Components.Published />
 
         }
         else if (PostViewState.AuthorPageView == PostViewState.AuthorPostState.bookmarks)
@@ -124,7 +125,7 @@
         var listpublished = ListPublished();
         await SignalR.InitializeAsync();
 
-        await Task.WhenAll(listfeature,listpublished);
+        await Task.WhenAll(listfeature, listpublished);
         OnViewCountUpdate();
 
     }
