--- a/Blog.Client/Components/Pages/Author/Components/AllPostss.razor
+++ b/Blog.Client/Components/Pages/Author/Components/AllPostss.razor
@@ -1,4 +1,5 @@
-﻿@*@if (ListPosts?.Any() == true)
+﻿@using Blog.Client.Realtime
+@*@if (ListPosts?.Any() == true)
 {
     <div class="space-y-6">
         @foreach (var post in ListPosts)
