--- a/Blog.Client/Components/Pages/Modal/PreviewPost.razor
+++ b/Blog.Client/Components/Pages/Modal/PreviewPost.razor
@@ -1,4 +1,5 @@
-﻿
+﻿@using Blog.Client.Realtime
+
 <input type="checkbox" id="preview_post" class="modal-toggle" />
 <div class="modal" role="dialog">
     <div class="modal-box  w-11/12 max-w-5xl max-h-[90vh] overflow-hidden rounded-md">
