--- a/Blog.Client/Components/_Imports.razor
+++ b/Blog.Client/Components/_Imports.razor
@@ -1,45 +1,49 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Application.Queries
+@using Blog.Application.Queries.Notification.GetListNotification
+@using Blog.Application.Queries.Posts.GetAdminRequest
+@using Blog.Application.Queries.Posts.GetApprovalTotal
+@using Blog.Application.Queries.Posts.RecentActivity
+@using Blog.Client
+@using Blog.Client.Components
+@using Blog.Client.Components.Pages.Admin
+@using Blog.Client.Components.Pages.Admin.Components
+@using Blog.Client.Components.Pages.Admin.Components.Home
+@using Blog.Client.Components.Pages.Author
+@using Blog.Client.Components.Pages.Author.Components
+@using Blog.Client.Components.Pages.Components
+@using Blog.Client.Components.Pages.Modal
+@using Blog.Client.Components.Pages.Public
+@using Blog.Client.Helper
 @using Blog.Client.Interface
+@using Blog.Client.Realtime
 @using Blog.Client.Services
 @using Blog.Client.State
+@using BlogApi.Application.Dtos
+@using BlogApi.Application.Models
+@using BlogApi.Application.Request.Category
+@using BlogApi.Application.Request.Posts
+@using BlogApi.Application.Request.Tag
+@using BlogApi.Application.Request.User
+@using BlogApi.Client.Interface
 @using BlogApi.Client.Security
+@using BlogApi.Client.Services
+@using BlogApi.Domain.Common
+@using BlogApi.Domain.Enums
+@using BlogApi.Domain.Helper
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Blog.Client
-@using Blog.Client.Components
-@using BlogApi.Client.Interface
-@using BlogApi.Application.Dtos
-@using BlogApi.Application.Request.Posts
-@using BlogApi.Domain.Helper
-@using BlogApi.Client.Services
-@using BlogApi.Application.Models
-@using BlogApi.Application.Request.User
-@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Authorization
-@using BlogApi.Application.Request.Category
-@using BlogApi.Application.Request.Tag
-@using BlogApi.Domain.Common
-@using BlogApi.Domain.Enums
 @using TinyMCE.Blazor
 @using static BlogApi.Domain.Enums.EntityEnum
-@using Blog.Client.Components.Pages.Modal
-@using Blog.Client.Components.Pages.Admin
-@using Blog.Client.Components.Pages.Public
-@using Blog.Client.Components.Pages.Author
-@using Blog.Client.Components.Pages.Author.Components
-@using Blog.Client.Components.Pages.Admin.Components.Home
-@using Blog.Client.Components.Pages.Admin.Components
-@using Blog.Client.Components.Pages.Components
-@using Blog.Client.Helper
-@using Application.Queries
-@using Blog.Application.Queries.Posts.RecentActivity
-@using Blog.Application.Queries.Posts.GetAdminRequest
-@using Blog.Application.Queries.Posts.GetApprovalTotal
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
+
+
 
 @inject IJSRuntime JS
 @inject HttpClient Http
